PL2/PSeIntParser.java
// Generated from PSeIntParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PSeIntParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO_LINEA=1, ASIGNAR=2, PARENTESIS_ABRIR=3, PARENTESIS_CERRAR=4, 
		CORCHETE_ABRIR=5, CORCHETE_CERRAR=6, COMA=7, DOSPUNTOS=8, PUNTOCOMA=9, 
		SALTOLINEA=10, MAYOR=11, MENOR=12, IGUAL=13, MENORIGUAL=14, MAYORIGUAL=15, 
		DISTINTO=16, ESPAR=17, ESIMPAR=18, ESPOSITIVO=19, ESNEGATIVO=20, ESCERO=21, 
		ESDIVISIBLE=22, ES=23, CONJUNCION=24, DISYUNCION=25, NEGACION=26, SUMA=27, 
		RESTA=28, MULTIPLICACION=29, DIVISION=30, POTENCIACION=31, MODULO=32, 
		INT=33, FLOAT=34, STRING=35, STRING_SIMPLE=36, STRING_DOBLE=37, ALGORITMO=38, 
		FINALGORITMO=39, DEFINIR=40, COMO=41, REAL=42, ENTERO=43, LOGICO=44, VERDADERO=45, 
		FALSO=46, CARACTER=47, DIMENSION=48, LEER=49, ESCRIBIR=50, BORRAR=51, 
		ESPERARTECLA=52, ESPERAR=53, SEGUNDOS=54, MILISEGUNDOS=55, SINSALTAR=56, 
		SI=57, ENTONCES=58, SINO=59, FINSI=60, SEGUN=61, HACER=62, CONPASO=63, 
		DEOTROMODO=64, FINSEGUN=65, MIENTRAS=66, FINMIENTRAS=67, REPETIR=68, HASTAQUE=69, 
		PARA=70, PARACADA=71, DESDE=72, DE=73, HASTA=74, FINPARA=75, FUNCION=76, 
		PORVALOR=77, PORREFERENCIA=78, FINFUNCION=79, PI=80, RAIZ=81, ABS=82, 
		LN=83, EXP=84, SEN=85, COS=86, TAN=87, ASEN=88, ACOS=89, ATAN=90, AZAR=91, 
		ALEATORIO=92, TRUNC=93, REDON=94, CONVERTIRANUMERO=95, CONVERTIRATEXTO=96, 
		LONGITUD=97, SUBCADENA=98, MAYUSCULAS=99, MINUSCULAS=100, CONCATENAR=101, 
		IDENTIFICADOR=102, WS=103;
	public static final int
		RULE_programa = 0, RULE_inicioalgoritmo = 1, RULE_instruccion = 2, RULE_primitiva = 3, 
		RULE_definir_var = 4, RULE_dimension_var = 5, RULE_arreglo = 6, RULE_asignacion = 7, 
		RULE_lectura = 8, RULE_escritura = 9, RULE_otras = 10, RULE_borrando = 11, 
		RULE_esperar_tecla = 12, RULE_esperar_tiempo = 13, RULE_definir_func = 14, 
		RULE_argumentos = 15, RULE_funciones = 16, RULE_funciones_arg = 17, RULE_control = 18, 
		RULE_condicional = 19, RULE_si_op = 20, RULE_segun_op = 21, RULE_repetitiva = 22, 
		RULE_mientras_op = 23, RULE_repetir_op = 24, RULE_para_op = 25, RULE_llamar_funcion = 26, 
		RULE_expr = 27, RULE_exp = 28, RULE_condicion = 29, RULE_expr_relacional = 30, 
		RULE_expr_logico = 31, RULE_mayor = 32, RULE_menor = 33, RULE_igual = 34, 
		RULE_menorigual = 35, RULE_mayorigual = 36, RULE_distinto = 37, RULE_conjuncion = 38, 
		RULE_disyuncion = 39, RULE_negacion = 40, RULE_suma = 41, RULE_resta = 42, 
		RULE_multiplicacion = 43, RULE_division = 44, RULE_potenciacion = 45, 
		RULE_modulo = 46, RULE_variable = 47, RULE_identificador = 48, RULE_asignar = 49, 
		RULE_parentesis_abrir = 50, RULE_parentesis_cerrar = 51, RULE_corchete_abrir = 52, 
		RULE_corchete_cerrar = 53, RULE_saltolinea = 54, RULE_coma = 55, RULE_dospuntos = 56, 
		RULE_puntocoma = 57, RULE_algoritmo = 58, RULE_finalgoritmo = 59, RULE_definir = 60, 
		RULE_dimension = 61, RULE_como = 62, RULE_real = 63, RULE_entero = 64, 
		RULE_logico = 65, RULE_verdadero = 66, RULE_falso = 67, RULE_caracter = 68, 
		RULE_leer = 69, RULE_escribir = 70, RULE_borrar = 71, RULE_esperartecla = 72, 
		RULE_esperar = 73, RULE_segundos = 74, RULE_milisegundos = 75, RULE_sinsaltar = 76, 
		RULE_si = 77, RULE_entonces = 78, RULE_sino = 79, RULE_finsi = 80, RULE_para = 81, 
		RULE_paracada = 82, RULE_de = 83, RULE_desde = 84, RULE_hasta = 85, RULE_conpaso = 86, 
		RULE_hacer = 87, RULE_finpara = 88, RULE_mientras = 89, RULE_finmientras = 90, 
		RULE_repetir = 91, RULE_hastaque = 92, RULE_segun = 93, RULE_deotromodo = 94, 
		RULE_finsegun = 95, RULE_funcion = 96, RULE_porvalor = 97, RULE_porreferencia = 98, 
		RULE_finfuncion = 99, RULE_pi = 100, RULE_raiz = 101, RULE_abs = 102, 
		RULE_ln = 103, RULE_expf = 104, RULE_sen = 105, RULE_cos = 106, RULE_tan = 107, 
		RULE_asen = 108, RULE_acos = 109, RULE_atan = 110, RULE_trunc = 111, RULE_redon = 112, 
		RULE_azar = 113, RULE_aleatorio = 114, RULE_longitud = 115, RULE_mayusculas = 116, 
		RULE_minusculas = 117, RULE_subcadena = 118, RULE_concatenar = 119, RULE_convertiranumero = 120, 
		RULE_convertiratexto = 121, RULE_string = 122, RULE_numero = 123, RULE_valor = 124, 
		RULE_logica = 125;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "inicioalgoritmo", "instruccion", "primitiva", "definir_var", 
			"dimension_var", "arreglo", "asignacion", "lectura", "escritura", "otras", 
			"borrando", "esperar_tecla", "esperar_tiempo", "definir_func", "argumentos", 
			"funciones", "funciones_arg", "control", "condicional", "si_op", "segun_op", 
			"repetitiva", "mientras_op", "repetir_op", "para_op", "llamar_funcion", 
			"expr", "exp", "condicion", "expr_relacional", "expr_logico", "mayor", 
			"menor", "igual", "menorigual", "mayorigual", "distinto", "conjuncion", 
			"disyuncion", "negacion", "suma", "resta", "multiplicacion", "division", 
			"potenciacion", "modulo", "variable", "identificador", "asignar", "parentesis_abrir", 
			"parentesis_cerrar", "corchete_abrir", "corchete_cerrar", "saltolinea", 
			"coma", "dospuntos", "puntocoma", "algoritmo", "finalgoritmo", "definir", 
			"dimension", "como", "real", "entero", "logico", "verdadero", "falso", 
			"caracter", "leer", "escribir", "borrar", "esperartecla", "esperar", 
			"segundos", "milisegundos", "sinsaltar", "si", "entonces", "sino", "finsi", 
			"para", "paracada", "de", "desde", "hasta", "conpaso", "hacer", "finpara", 
			"mientras", "finmientras", "repetir", "hastaque", "segun", "deotromodo", 
			"finsegun", "funcion", "porvalor", "porreferencia", "finfuncion", "pi", 
			"raiz", "abs", "ln", "expf", "sen", "cos", "tan", "asen", "acos", "atan", 
			"trunc", "redon", "azar", "aleatorio", "longitud", "mayusculas", "minusculas", 
			"subcadena", "concatenar", "convertiranumero", "convertiratexto", "string", 
			"numero", "valor", "logica"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "','", "':'", "';'", null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO_LINEA", "ASIGNAR", "PARENTESIS_ABRIR", "PARENTESIS_CERRAR", 
			"CORCHETE_ABRIR", "CORCHETE_CERRAR", "COMA", "DOSPUNTOS", "PUNTOCOMA", 
			"SALTOLINEA", "MAYOR", "MENOR", "IGUAL", "MENORIGUAL", "MAYORIGUAL", 
			"DISTINTO", "ESPAR", "ESIMPAR", "ESPOSITIVO", "ESNEGATIVO", "ESCERO", 
			"ESDIVISIBLE", "ES", "CONJUNCION", "DISYUNCION", "NEGACION", "SUMA", 
			"RESTA", "MULTIPLICACION", "DIVISION", "POTENCIACION", "MODULO", "INT", 
			"FLOAT", "STRING", "STRING_SIMPLE", "STRING_DOBLE", "ALGORITMO", "FINALGORITMO", 
			"DEFINIR", "COMO", "REAL", "ENTERO", "LOGICO", "VERDADERO", "FALSO", 
			"CARACTER", "DIMENSION", "LEER", "ESCRIBIR", "BORRAR", "ESPERARTECLA", 
			"ESPERAR", "SEGUNDOS", "MILISEGUNDOS", "SINSALTAR", "SI", "ENTONCES", 
			"SINO", "FINSI", "SEGUN", "HACER", "CONPASO", "DEOTROMODO", "FINSEGUN", 
			"MIENTRAS", "FINMIENTRAS", "REPETIR", "HASTAQUE", "PARA", "PARACADA", 
			"DESDE", "DE", "HASTA", "FINPARA", "FUNCION", "PORVALOR", "PORREFERENCIA", 
			"FINFUNCION", "PI", "RAIZ", "ABS", "LN", "EXP", "SEN", "COS", "TAN", 
			"ASEN", "ACOS", "ATAN", "AZAR", "ALEATORIO", "TRUNC", "REDON", "CONVERTIRANUMERO", 
			"CONVERTIRATEXTO", "LONGITUD", "SUBCADENA", "MAYUSCULAS", "MINUSCULAS", 
			"CONCATENAR", "IDENTIFICADOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PSeIntParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PSeIntParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public InicioalgoritmoContext inicioalgoritmo() {
			return getRuleContext(InicioalgoritmoContext.class,0);
		}
		public FinalgoritmoContext finalgoritmo() {
			return getRuleContext(FinalgoritmoContext.class,0);
		}
		public List<Definir_funcContext> definir_func() {
			return getRuleContexts(Definir_funcContext.class);
		}
		public Definir_funcContext definir_func(int i) {
			return getRuleContext(Definir_funcContext.class,i);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(255);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(252);
				definir_func();
				}
				}
				setState(257);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(258);
			inicioalgoritmo();
			setState(260); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(259);
				saltolinea();
				}
				}
				setState(262); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SALTOLINEA );
			setState(267);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 40)) & ~0x3f) == 0 && ((1L << (_la - 40)) & ((1L << (DEFINIR - 40)) | (1L << (DIMENSION - 40)) | (1L << (LEER - 40)) | (1L << (ESCRIBIR - 40)) | (1L << (BORRAR - 40)) | (1L << (ESPERARTECLA - 40)) | (1L << (ESPERAR - 40)) | (1L << (SI - 40)) | (1L << (SEGUN - 40)) | (1L << (MIENTRAS - 40)) | (1L << (REPETIR - 40)) | (1L << (PARA - 40)) | (1L << (PARACADA - 40)) | (1L << (IDENTIFICADOR - 40)))) != 0)) {
				{
				{
				setState(264);
				instruccion();
				}
				}
				setState(269);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(270);
			finalgoritmo();
			setState(274);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(271);
				saltolinea();
				}
				}
				setState(276);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(280);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(277);
				definir_func();
				}
				}
				setState(282);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicioalgoritmoContext extends ParserRuleContext {
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public InicioalgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicioalgoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterInicioalgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitInicioalgoritmo(this);
		}
	}

	public final InicioalgoritmoContext inicioalgoritmo() throws RecognitionException {
		InicioalgoritmoContext _localctx = new InicioalgoritmoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicioalgoritmo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(283);
			algoritmo();
			setState(284);
			identificador();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public PrimitivaContext primitiva() {
			return getRuleContext(PrimitivaContext.class,0);
		}
		public PuntocomaContext puntocoma() {
			return getRuleContext(PuntocomaContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public ControlContext control() {
			return getRuleContext(ControlContext.class,0);
		}
		public Llamar_funcionContext llamar_funcion() {
			return getRuleContext(Llamar_funcionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitInstruccion(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		int _la;
		try {
			setState(302);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(286);
				primitiva();
				setState(288);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUNTOCOMA) {
					{
					setState(287);
					puntocoma();
					}
				}

				setState(291); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(290);
					saltolinea();
					}
					}
					setState(293); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SALTOLINEA );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(295);
				control();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(296);
				llamar_funcion();
				setState(298); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(297);
					saltolinea();
					}
					}
					setState(300); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SALTOLINEA );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivaContext extends ParserRuleContext {
		public Definir_varContext definir_var() {
			return getRuleContext(Definir_varContext.class,0);
		}
		public Dimension_varContext dimension_var() {
			return getRuleContext(Dimension_varContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public LecturaContext lectura() {
			return getRuleContext(LecturaContext.class,0);
		}
		public EscrituraContext escritura() {
			return getRuleContext(EscrituraContext.class,0);
		}
		public OtrasContext otras() {
			return getRuleContext(OtrasContext.class,0);
		}
		public PrimitivaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiva; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterPrimitiva(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitPrimitiva(this);
		}
	}

	public final PrimitivaContext primitiva() throws RecognitionException {
		PrimitivaContext _localctx = new PrimitivaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitiva);
		try {
			setState(310);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEFINIR:
				enterOuterAlt(_localctx, 1);
				{
				setState(304);
				definir_var();
				}
				break;
			case DIMENSION:
				enterOuterAlt(_localctx, 2);
				{
				setState(305);
				dimension_var();
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(306);
				asignacion();
				}
				break;
			case LEER:
				enterOuterAlt(_localctx, 4);
				{
				setState(307);
				lectura();
				}
				break;
			case ESCRIBIR:
				enterOuterAlt(_localctx, 5);
				{
				setState(308);
				escritura();
				}
				break;
			case BORRAR:
			case ESPERARTECLA:
			case ESPERAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(309);
				otras();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definir_varContext extends ParserRuleContext {
		public DefinirContext definir() {
			return getRuleContext(DefinirContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public ComoContext como() {
			return getRuleContext(ComoContext.class,0);
		}
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public LogicoContext logico() {
			return getRuleContext(LogicoContext.class,0);
		}
		public CaracterContext caracter() {
			return getRuleContext(CaracterContext.class,0);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public Definir_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definir_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterDefinir_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitDefinir_var(this);
		}
	}

	public final Definir_varContext definir_var() throws RecognitionException {
		Definir_varContext _localctx = new Definir_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definir_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(312);
			definir();
			setState(313);
			variable();
			setState(319);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(314);
				coma();
				setState(315);
				variable();
				}
				}
				setState(321);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(322);
			como();
			setState(327);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REAL:
				{
				setState(323);
				real();
				}
				break;
			case ENTERO:
				{
				setState(324);
				entero();
				}
				break;
			case LOGICO:
				{
				setState(325);
				logico();
				}
				break;
			case CARACTER:
				{
				setState(326);
				caracter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dimension_varContext extends ParserRuleContext {
		public DimensionContext dimension() {
			return getRuleContext(DimensionContext.class,0);
		}
		public List<ArregloContext> arreglo() {
			return getRuleContexts(ArregloContext.class);
		}
		public ArregloContext arreglo(int i) {
			return getRuleContext(ArregloContext.class,i);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public PuntocomaContext puntocoma() {
			return getRuleContext(PuntocomaContext.class,0);
		}
		public Dimension_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimension_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterDimension_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitDimension_var(this);
		}
	}

	public final Dimension_varContext dimension_var() throws RecognitionException {
		Dimension_varContext _localctx = new Dimension_varContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dimension_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(329);
			dimension();
			setState(330);
			arreglo();
			setState(336);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(331);
				coma();
				setState(332);
				arreglo();
				}
				}
				setState(338);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(340);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(339);
				puntocoma();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
